--- a/app/globals.css
+++ b/app/globals.css
@@ -826,6 +826,39 @@ body {
   .form-group {
     margin-bottom: 1rem;
   }
+
+  .container {
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+    width: 100vw !important;
+    max-width: 100vw !important;
+    box-sizing: border-box;
+  }
+  .header .container,
+  .hero .container,
+  .testimonials .container,
+  .video-section .container {
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+    width: 100vw !important;
+    max-width: 100vw !important;
+    box-sizing: border-box;
+  }
+  .testimonial-card,
+  .modal-content,
+  .price-item,
+  .ad-container {
+    border-radius: 0 !important;
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+    width: 100vw !important;
+    max-width: 100vw !important;
+    box-sizing: border-box;
+  }
 }
 
 @media (min-width: 992px) {
