--- a/app/globals.css
+++ b/app/globals.css
@@ -722,7 +722,7 @@ body {
 
 /* Modal Styles */
 .modal {
-  display: none;
+  display: flex;
   position: fixed;
   z-index: 9999;
   left: 0;
@@ -730,9 +730,9 @@ body {
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: rgba(0, 0, 0, 0.7);
-  backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px);
+  background-color: rgba(0, 0, 0, 0.4);
+  backdrop-filter: blur(2px);
+  -webkit-backdrop-filter: blur(2px);
   opacity: 0;
   transition: opacity 0.3s ease;
 }
